--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
-  "dependencies": {
-    "express": "^4.17.1",
-    "pigpio": "^3.3.0",
-    "socket.io": "^4.0.0"
-  }
+	"name": "socketio-chat",
+	"version": "0.1.0",
+	"description": "A node js chat app",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js"
+	},
+	"dependencies": {
+		"express": "^4.12.4",
+		"socket.io": "*"
+	},
+	"keywords": [
+		"node",
+		"express",
+		"chat"
+	],
+	"license": "MIT"
 }
